--- a/src/views/product-edit-form.ejs
+++ b/src/views/product-edit-form.ejs
@@ -18,22 +18,26 @@
 				<div class="row product-detail">
 					<div class="col-12 col-md-6">
 						<label for="name" class="form-label">Nombre del producto:</label>
-						<input type="text" id="name" name="name" placeholder="Ej: Zapatillas Reebok" class="form-input">
+						<input type="text" id="name" name="name" value="<%= product.name %>" class="form-input">
 					</div>
 					<div class="col-12 col-md-6">
 						<label for="price" class="form-label">Precio del producto:</label>
-						<input type="text" id="price" name="price" placeholder="Ej: 5678" class="form-input">
+						<input type="text" id="price" name="price" value="<%= product.price %> " class="form-input">
 					</div>
 					<div class="col-12 col-md-6">
 						<label for="discount" class="form-label">Descuento:</label>
-						<input type="text" id="discount" name="discount" placeholder="Ej: 15" class="form-input">
+						<input type="text" id="discount" name="discount" value="<%= product.discount %> " class="form-input">
 					</div>
 					<div class="col-12 col-md-6">
 						<label for="category" class="form-label">Categoría:</label>
 						<select name="category" id="category" class="form-input">
-							<option value="">Elegí</option>
-							<option value="in-sale">En oferta</option>
-							<option value="visited" >Últimos agregados</option>
+							<% if (product.category === "in-sale") { %>
+								<option value="in-sale" selected>En oferta</option>
+								<option value="visited" >Últimos agregados</option>
+							<% } else {%>
+							<option value="in-sale" >En oferta</option>
+							<option value="visited" selected>Últimos agregados</option>
+							<% } %>
 						</select>
 					</div>
 					<div class="col-12">
